# course_work

./: .gitignore  CMakeLists.txt  addbookdialog.cpp  addbookdialog.h  admincabinet.cpp  admincabinet.h  bookcarddelegate.cpp  bookcarddelegate.h  booksfilterproxymodel.cpp  booksfilterproxymodel.h  booksmodel.cpp  booksmodel.h  database.cpp  database.h  loansmodel.cpp  loansmodel.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  styles.qss  usercabinet.cpp  usercabinet.h
deploy/: users.sqlite
